--- a/data-engineer.html
+++ b/data-engineer.html
@@ -70,7 +70,7 @@
     <div class="container">
 <!--Begin body here --> 
 <h5><a href='https://boards.greenhouse.io/agoda/jobs/1939329'>Job Application for Data Engineer - Hadoop Apps Team at Agoda</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Bangkok Thailand?  Thailand</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
 <h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qDT9Vfwk&k=Job&j=ob4i9fwq&__jvst=Employee&__jvsd=sYcghiwu&__jvsc=Twitter&bid=nudmqMwK'>Farfetch Careers - Data Engineer - BI</a></h5> 
@@ -81,7 +81,7 @@
 <p><span class="badge badge-light">Charlotte, NC</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<h5><a href='https://jobs.crelate.com/portal/sundial/job/i85jb4somqgiye1g7m5zzuaabo'>Manufacturing Data Engineer | Sundial Software Career Opportunities</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/sundial/job/i85jb4somqgiye1g7m5zzuaabo'>Manufacturing Data Engineer | Sundial Software Career Opportunities</a></h5> 
 <p><span class="badge badge-light">Madison, WI  Madison</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -175,7 +175,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/CapTechConsulting/743999697978452-data-engineer'>CapTech Consulting Data Engineer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/CapTechConsulting/743999697978452-data-engineer'>CapTech Consulting Data Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Denver, CO</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -237,7 +237,7 @@ systems,?...</p>
 <p><span class="badge badge-light">Dublin</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<h5><a href='https://careers.jobscore.com/careers/1904labs/jobs/modern-data-engineer-cYDOAY-Ser6yzHaKiznY58'>Modern Data Engineer #0160 job at 1904labs in Saint Louis, MO, powered by JobScore</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers.jobscore.com/careers/1904labs/jobs/modern-data-engineer-cYDOAY-Ser6yzHaKiznY58'>Modern Data Engineer #0160 job at 1904labs in Saint Louis, MO, powered by JobScore</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -354,7 +354,7 @@ architecture,; Identify, design, and implement internal process improvements:?..
 <p><span class="badge badge-light">Seattle, WA  Seattle</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://dasauge.de/jobs/stellenangebote/fest/e584819'>Stellenangebot: Data Engineer (m/w/d) (Berlin) ? dasauge? Stellenmarkt</a></h5> 
+<h5><a href='https://dasauge.de/jobs/stellenangebote/fest/e584819'>Stellenangebot: Data Engineer (m/w/d) (Berlin) ? dasauge? Stellenmarkt</a></h5> 
 <p><span class="badge badge-light">Berlin Berlin</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
@@ -476,7 +476,7 @@ architecture,; Identify, design, and implement internal process improvements:?..
 <p><span class="badge badge-light">Z?rich, Switzerland</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/starry/jobs/4496358002'>Job Application for Data Engineering Manager at Starry</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/starry/jobs/4496358002'>Job Application for Data Engineering Manager at Starry</a></h5> 
 <p><span class="badge badge-light">New York, New York</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
